# lemon

./: CMakeLists.txt  README.md
include/lemon/core/system/: process.h  process_manager.h  process_runner.h  state.h  state_manager.h
src/core/: CMakeLists.txt
src/core/system/: process_manager.cpp  process_runner.cpp  state.cpp  state_manager.cpp
tests/: CMakeLists.txt
